fix(tag): fixed button spacing for fa-times

--- a/src/client/sass/themes/_theme-default.scss
+++ b/src/client/sass/themes/_theme-default.scss
@@ -228,6 +228,7 @@ html, body {
         border-width: 0;
         border-style: none;
         color: inherit;
+        padding: 0;
 
         &.btn--flat {
             padding: 0.5rem 1rem;
